[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semla"
version = "0.1.0"
description = "Structural Equation Modeling with lavaan-style syntax for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "semla contributors" },
]
keywords = ["sem", "cfa", "structural equation modeling", "lavaan", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "pandas>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/semla"]

[tool.hatch.build.targets.wheel.force-include]
"src/semla/datasets/HolzingerSwineford1939.csv" = "semla/datasets/HolzingerSwineford1939.csv"

[tool.pytest.ini_options]
testpaths = ["tests"]
